Fixed Google Ads not displaying properly

--- a/index.html
+++ b/index.html
@@ -44,12 +44,22 @@
 <body>
     <div class="leaderboard_728x90">
         <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-        <ins class="adsbygoogle" data-ad-client="ca-pub-4533895183221047" data-ad-slot="2414665538"></ins>
+        <ins
+            class="adsbygoogle"
+            style="display:inline-block; width:728px; height:90px"
+            data-ad-client="ca-pub-4533895183221047"
+            data-ad-slot="2414665538">
+        </ins>
         <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
     </div>
     <div class="leaderboard_728x90">
         <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-        <ins class="adsbygoogle" data-ad-client="ca-pub-4533895183221047" data-ad-slot="2414665538"></ins>
+        <ins
+            class="adsbygoogle"
+            style="display:inline-block; width:728px; height:90px"
+            data-ad-client="ca-pub-4533895183221047"
+            data-ad-slot="2414665538">
+        </ins>
         <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
     </div>
     <p>{{ appName }} v.{{ appVersion }} - {{ GPU }} - {{ FPS }} FPS</p>
@@ -624,12 +634,22 @@
     </p>
     <div class="leaderboard_728x90">
         <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-        <ins class="adsbygoogle" data-ad-client="ca-pub-4533895183221047" data-ad-slot="2414665538"></ins>
+        <ins
+            class="adsbygoogle"
+            style="display:inline-block; width:728px; height:90px"
+            data-ad-client="ca-pub-4533895183221047"
+            data-ad-slot="2414665538">
+        </ins>
         <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
     </div>
     <div class="leaderboard_728x90">
         <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-        <ins class="adsbygoogle" data-ad-client="ca-pub-4533895183221047" data-ad-slot="2414665538"></ins>
+        <ins
+            class="adsbygoogle"
+            style="display:inline-block; width:728px; height:90px"
+            data-ad-client="ca-pub-4533895183221047"
+            data-ad-slot="2414665538">
+        </ins>
         <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
     </div>
     <br />
