--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         <hr />
         <p>{{ state }}</p>
         <hr />
-        <h5>Interactions (similar to Blender)</h5>
+        <h5>Interactions</h5>
         <table id="interactions">
             <tr data-ng-repeat="i in interactions">
                 <th>{{ i.header }}</th>
